--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera! </h1>
+<h1> Hello Coursera!, It has been a Nice Day! </h1>
 </body>
 </html>
